tests/sema/bad/16_addr_signal.sg
// нельзя брать адрес от signal
signal s = 0;
let p:&int = &s;         // error: cannot take address of signal 's'
